Redoing layout, fixing spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,8 @@
 
 body {
     font-family: 'Inter', sans-serif;
-    
 }
 
-#contact,
-#about,
-#services, 
-#products,
-#hero,
-#top-section,
-#footer {
-    margin: 0 50px;
-}
 
 /*---------header Styles------*/
 header i {
@@ -32,74 +22,36 @@ header i {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-}
-
-.hero-area h1 {
-    width: 95%;
-}
-
-.hero-area p {
-    width: 70%;
 }
 
 .hero-area button {
     color: #0146C0;
-    width: 20%;
-}
-
- #lady-image{
-    max-height: 80%;
-    margin-top: 146px;
-    margin-left: 157px;
 }
 
 /*---------About  Styles------*/
-.about-area h2 {
-    margin: 50px;
-}
 
 .about-area h4 {
     color: #0146C0;
 }
 
 .about-area button {
-    width: 30%;
     background: #0146C0;
     border-radius: 3px;
 }
 
 /*---------Product Styles------*/
-.product-section h2 {
-    margin: 60px;
-}
 
-.stars {
-    color: rgba(255, 204, 71, 0.99);
-    justify-content: center;
-    margin-bottom: 70px;
-}
 
 /*---------Services Styles------*/
-.services-section h2 {
-    margin: 50px;
-}
+
 
 /*---------Contact Styles------*/
 .contact-section button {
     background-color: #0146C0;
-    width: 15%;
-    border-radius: 8px;
-    margin-bottom: 40px;
-}
-
-.contact-section h2 {
-    margin: 50px;
 }
 
 .contact-section input,
 .contact-section textarea {
-    margin-bottom: 30px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
 }
@@ -117,14 +69,6 @@ header i {
     color: #B4CEFD;
 }
 
-address p {
-    margin-bottom: 13px;
-}
-
 hr {
     border: 1px solid rgba(255, 255, 255, 0.19);
 }
-
-@media screen and (max-width: 375px) {
-    
-} 
